# Coava_backend

./: .gitignore  README.md  pyproject.toml  test.py
coava/: manage.py
coava/api/: models.py  serializer.py  urls.py  views.py
coava/api/migrations/: 0001_initial.py  0002_alter_user_country_alter_user_phone.py  0003_alter_user_nickname.py  0004_alter_user_email.py  0005_alter_user_country_alter_user_email_and_more.py  0006_user_intro.py  0007_user_is_activated.py  0008_meme.py  0009_daily_delete_meme.py  0010_buzz_meme.py  0011_alter_daily_date.py  0012_remove_daily_id_alter_daily_userid.py  0013_section_item.py  0014_myitem_avatar.py  0015_alter_myitem_items.py  0016_alter_myitem_items.py  0017_alter_buzz_image_alter_meme_image.py
coava/coava/: asgi.py  settings.py  urls.py  wsgi.py
